# s2geography

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.Rmd  README.md  codecov.yml  vendor-geoarrow.sh  vendor-nanoarrow.sh
.github/workflows/: brew.yaml  build-and-run.yaml  conda.yaml  dev.yaml  render-rmarkdown.yaml  run-examples.yaml  run-tests.yaml  vcpkg.yaml
capi/: CMakeLists.txt
capi/include/: s2geography_c.h
capi/src/: s2geography_c.cc
capi/test/: s2geography_c_api_test.c  s2geography_c_test.cc
ci/: environment.yml
ci/scripts/: run-clang-tidy.sh
ci/triplets/: arm64-osx-asan.cmake  x64-linux-asan-only.cmake  x64-linux-asan.cmake
cmake/: s2geographyConfig.cmake.in
cmake/modules/: Finds2.cmake
examples/example-rmarkdown/: example.Rmd  example.md
examples/example-simple/: example-simple.cc
src/: accessors-geog.hpp  build.cpp  coverings.hpp  distance.cpp  geography.hpp  predicates.cpp  predicates.hpp  s2geography.h  s2geography.hpp  s2geography_c.h
src/capi/: s2geography_c.cc  s2geography_c.h  s2geography_c_test.cc
src/geoarrow/: geoarrow.c  geoarrow.h
src/s2geography/: accessors-geog.cc  accessors-geog.cpp  accessors-geog.h  accessors-geog.hpp  accessors-geog_test.cc  accessors.cc  accessors.cpp  accessors.h  accessors.hpp  aggregator.h  aggregator.hpp  arrow_abi.h  build.cc  build.cpp  build.h  build.hpp  build_test.cc  constructor.h  constructor.hpp  coverings.cc  coverings.cpp  coverings.h  coverings.hpp  coverings_test.cc  distance.cc  distance.cpp  distance.h  distance.hpp  distance_test.cc  geoarrow-geography.cc  geoarrow-geography.h  geoarrow-geography_test.cc  geoarrow-geography_util.h  geoarrow-imports.h  geoarrow.cc  geoarrow.h  geoarrow2.cc  geoarrow_test.cc  geography.cc  geography.cpp  (+39 more)
src/s2geography/arrow_udf/: arrow_udf.cc  arrow_udf.h  arrow_udf_internal.h  arrow_udf_test.cc  arrow_udf_test_internal.h
src/s2geography/op/: cell.cc  cell.h  cell_test.cc  op.h  point.cc  point.h
src/s2geography/sedona_udf/: sedona_extension.h  sedona_udf_internal.h  sedona_udf_internal_test.cc  sedona_udf_test_internal.h
